Fixed blur on Safari

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,6 +21,7 @@ body
     font-family: 'Cutive Mono', monospace;
     font-weight: 100;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     height: 100vh;
 }
 
